Fix header vert align.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ header {
   height: 4rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo,
